--- a/0_Abschlussbericht/Main.tex
+++ b/0_Abschlussbericht/Main.tex
@@ -32,10 +32,10 @@
  % Metadaten der Arbeit
  %
  % Titel
- \newcommand{\ifrtitleOne}{Modul X: }
- \newcommand{\ifrtitleTwo}{Hier sollte der Titel Ihrer Arbeit stehen}
+ \newcommand{\ifrtitleOne}{Systemidentifikation: }
+ \newcommand{\ifrtitleTwo}{Schätzung der Parameter flugmechanischer Modelle aus Flugmessdaten}
  % Author
-  \newcommand{\ifrauthor}{Max Musterstudent}
+  \newcommand{\ifrauthor}{Calvin Ebert\\Adam Ghribi\\Florian Gschwandtner\\Fabrizio Turco}
  %
  %=================================================================== 
  %==================================================================
