--- a/0_Abschlussbericht/src/00_title.tex
+++ b/0_Abschlussbericht/src/00_title.tex
@@ -4,14 +4,15 @@
 \section*{
 \vspace{4.5cm}
 {\huge \\ 
-Seminar  \\
-Schätzverfahren   \vspace{1.5cm}\\ 
+Aerobotics-Seminar  \\
+Moonshot-Aufgabe   \vspace{1.5cm}\\ 
 \ifrtitleOne \\
 \ifrtitleTwo \\
 \vspace{4.3cm} 
 } 
 {\normalsize
-Autor: \ifrauthor \\
-Datum: xx.xx.xxxx
+Autoren: Gruppe 02\\ 
+\ifrauthor \\
+Datum: 06.08.2021
 }
 }
