--- a/0_Abschlussbericht/src/02_chapter.tex
+++ b/0_Abschlussbericht/src/02_chapter.tex
@@ -1,5 +1,5 @@
 \chapter{Kapitel}
-Zitat auf \cite{Johnson1994} und \cite{Bielawa1992}.
+Zitat auf \cite{Klein2006} und \cite{Bielawa1992}.
 \Blindtext
 \section{Abschnitt}
 \Blindtext
