--- a/0b_Präsentation/presentation.tex
+++ b/0b_Präsentation/presentation.tex
@@ -58,7 +58,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% setup %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Modul 7: \\ Levenberg-Marquardt \\ Algorithmus}
+\title{Moonshot-Aufgabe: \\ Systemidentifikation}
 \author[Florian Gschwandtner]{Florian \\ Gschwandtner}
 \institute{IFR}
 
