--- a/0a_Abschlussbericht/Main.tex
+++ b/0a_Abschlussbericht/Main.tex
@@ -52,9 +52,10 @@
 \tableofcontents
 
 %Chapters
-\input{./src/01_chapter.tex}
-\input{./src/02_chapter.tex}
-\input{./src/03_chapter.tex}
+\input{./src/einleitung.tex}
+\input{./src/modell.tex}
+\input{./src/vorbereitung.tex}
+\input{./src/zusammenfassung.tex}
 
 %Bibliography
 \addcontentsline{toc}{chapter}{Literaturverzeichnis}
