--- a/0a_Abschlussbericht/src/bibfile.bib
+++ b/0a_Abschlussbericht/src/bibfile.bib
@@ -8,10 +8,10 @@
 	isbn = {1-56347-832-3}
 }
 
-
-@BOOK{Fichter2009,
+% überarbeiten!
+@booklet{Fichter2009,
   title = {Flugmechanik},
-  publisher = {Shaker Verlag},
+  institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
   year = {2009},
   author = {Walter Fichter and Werner Grimm}
 }
@@ -32,4 +32,3 @@
  publisher = {AIAA Inc., Washington, D.C and American Institute of Aeronautics~{and}~Astronautics},
  isbn = {1563476983}
 }
-
