--- a/0a_Abschlussbericht/src/00_title.tex
+++ b/0a_Abschlussbericht/src/00_title.tex
@@ -3,16 +3,16 @@
 %********************************
 \section*{
 \vspace{4.5cm}
-{\huge \\ 
+{\LARGE \\ 
 Aerobotics-Seminar  \\
 Moonshot-Aufgabe   \vspace{1.5cm}\\ 
 \ifrtitleOne \\
-\ifrtitleTwo \\
+\huge \ifrtitleTwo \\
 \vspace{4.3cm} 
 } 
 {\normalsize
 Autoren: Gruppe 02\\ 
-\ifrauthor \\
+\ifrauthor \vspace{1cm}\\
 Datum: 06.08.2021
 }
 }
