--- a/0a_Abschlussbericht/src/vorbereitung.tex
+++ b/0a_Abschlussbericht/src/vorbereitung.tex
@@ -2,3 +2,35 @@
 
 Aus den Flugversuchen des e-Genius 1:3 liegt eine Fülle von Messdaten in verschiedenen .csv-Dateien vor. Für die weitere 
 Verarbeitung ist es zunächst nötig, aus den gegebenen Messdaten die für die Systemidentifikation relevanten
+
+\section{Filterung} %Florian
+
+Verrauschte Messdaten stellen für die Systemidentifikation eine Herausforderung dar. Numerische Ableitungen aus verrauschten Daten liefern in vielen Fällen keine sinnvolle Aussage. Neben aufwändigeren Ableitungsregeln bietet sich eine vorangehende Filterung der Daten an.
+
+Das Vorwärts-Rückwärtsfilter bietet den Vorteil, dass keine Phasenverschiebung auftritt. Gerade wenn nur einzelne Signalteile gefiltert werden, beispielsweise nur der Eingang, ist diese Eigenschaft unerlässlich. Der Nachteil ist, dass das Filter nicht in Echtzeit verwendet werden kann, da immer die vollständige Datenreihe vorliegen muss. Für eine Systemidentifikation ist dies keine Einschränkung.
+
+\subsection{Ablauf}
+
+Für das Filters wird eine Übertragungsfunktion $f(s)$ wird auf die Messdaten angewandt vorwärts, die Messdaten umgekehrt und die selbe Übertragungsfunktion noch einmal verwendet. In Matlab ist dies in der Funktion \textit{filtfilt()} bereits implementiert. 
+
+\subsection{Wahl der Filterübertragungsfunktion}
+
+Es wurde ein PT2-Glied gewählt, da so die Eckfrequenz direkt eingestellt werden kann.
+
+Mit
+
+\begin{equation}
+	\omega_{filt} = 2 \cdot \pi \cdot f_{eck}
+\end{equation}
+
+und
+
+\begin{equation}
+	\zeta_{filt} = \frac{1}{\sqrt{2}}
+\end{equation}
+
+ergibt sich die Übertragungsfunktion zu:
+
+\begin{equation}
+	f(s) = \frac{\omega_{filt}^2}{s^2+2 \cdot \zeta_{filt} \cdot \omega_{filt} +\omega_{filt}^2}
+\end{equation}
