kap. zeitbereich & frequenzbereich hinzugefuegt

--- a/0a_Abschlussbericht/Main.tex
+++ b/0a_Abschlussbericht/Main.tex
@@ -55,6 +55,8 @@
 \input{./src/einleitung.tex}
 \input{./src/modell.tex}
 \input{./src/vorbereitung.tex}
+\input{./src/zeitbereich.tex}
+\input{./src/frequenzbereich.tex}
 \input{./src/zusammenfassung.tex}
 
 %Bibliography
