--- a/0a_Abschlussbericht/src/vorbereitung.tex
+++ b/0a_Abschlussbericht/src/vorbereitung.tex
@@ -4,6 +4,12 @@ Aus den Flugversuchen des e-Genius 1:3 liegt eine Fülle von Messdaten in versch
 Verarbeitung ist es zunächst nötig, aus den gegebenen Messdaten die für die 
 Systemidentifikation relevanten auszuwählen bzw. zu berechnen.
 
+\section{Ermittlung der relevanten Signale} % Fabrizio
+
+
+\section{Trimmpunkte} % Fabrizio
+
+
 \section{Filterung} %Florian
 
 Verrauschte Messdaten stellen für die Systemidentifikation eine Herausforderung dar. Numerische Ableitungen aus verrauschten Daten liefern in vielen Fällen keine sinnvolle Aussage. Neben aufwändigeren Ableitungsregeln bietet sich eine vorangehende Filterung der Daten an.
