Todonotes-Package eingefügt

--- a/0a_Abschlussbericht/Main.tex
+++ b/0a_Abschlussbericht/Main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,ngerman,12pt,chapterprefix=false,oneside,openright]{scrreprt}
+\documentclass[a4paper,ngerman,11pt,chapterprefix=false,oneside,openright]{scrreprt}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage[headings]{fullpage}
@@ -24,6 +24,9 @@
 %Mathematikfunktionen
 \usepackage{amsmath,amsfonts,amssymb}
 \usepackage{mathtools}
+
+% ToDo-Notes
+\usepackage{todonotes}
 
 \makeindex
   
