--- a/0a_Abschlussbericht/src/modell.tex
+++ b/0a_Abschlussbericht/src/modell.tex
@@ -1,4 +1,4 @@
-\chapter{Modell}
+\chapter{Modelle}
 
 Im folgenden Abschnitt werden die der durchgeführten Systemidentifikationen 
 zugrundeliegenden Modelle beschrieben, deren beiwerte zu bestimmen sind. Es 
