--- a/0a_Abschlussbericht/src/vorbereitung.tex
+++ b/0a_Abschlussbericht/src/vorbereitung.tex
@@ -5,10 +5,10 @@ Verarbeitung ist es zunächst nötig, aus den gegebenen Messdaten die für die
 Systemidentifikation relevanten auszuwählen bzw. zu berechnen.
 
 \section{Ermittlung der relevanten Signale} % Fabrizio
-
+\todo[inline]{Abschnitt schreiben}
 
 \section{Trimmpunkte} % Fabrizio
-
+\todo[inline]{Abschnitt schreiben}
 
 \section{Filterung} %Florian
 
