--- a/0a_Abschlussbericht/Main.tex
+++ b/0a_Abschlussbericht/Main.tex
@@ -28,6 +28,10 @@
 % ToDo-Notes
 \usepackage{todonotes}
 
+% References
+\usepackage[hidelinks]{hyperref}
+\usepackage{cleveref}
+
 \makeindex
   
 %==================================================================
@@ -51,6 +55,7 @@
 %Titlepage
 \input{./src/00_title.tex}
 
+\listoftodos
 %Table of contents
 \tableofcontents
 
