--- a/0a_Abschlussbericht/src/vorbereitung.tex
+++ b/0a_Abschlussbericht/src/vorbereitung.tex
@@ -1,14 +1,57 @@
 \chapter{Vorbereitung der Daten}
+Aus den Flugversuchen des e-Genius 1:3 liegt eine Fülle von Messdaten in verschiedenen .csv-Dateien vor. Im folgenden Kapitel 
+wird erklärt, wie diese vorbereitet werden, um sie für die anschließende Systemidentifikation zu verwenden.
 
-Aus den Flugversuchen des e-Genius 1:3 liegt eine Fülle von Messdaten in verschiedenen .csv-Dateien vor. Für die weitere 
-Verarbeitung ist es zunächst nötig, aus den gegebenen Messdaten die für die 
-Systemidentifikation relevanten auszuwählen bzw. zu berechnen.
+
 
 \section{Ermittlung der relevanten Signale} % Fabrizio
-\todo[inline]{Abschnitt schreiben}
+%\todo[inline]{Abschnitt "Ermittlung der relevanten Signale" schreiben}
+Für die weitere Verarbeitung ist es zunächst nötig, aus den gegebenen Messdaten die relevanten Signalverläufe auszuwählen 
+bzw. zu berechnen. Die meisten Zustandsgrößen können direkt aus den Messdaten verwendet werden, einzig der Bahnwinkel $ 
+\gamma $ muss explizit berechnet werden. Die Bestimmung über die Beziehung $ \gamma=\theta-\alpha $ liefert dabei aufgrund 
+eines unplausiblen Verlaufs des Nickwinkels $ \theta $ kein sinnvolles Ergebnis.\footnote{Berechnet man den Bahnwinkel auf 
+diese Weise, nimmt er genau wie der Nickwinkel nie Werte unter 0 an. Lediglich der Anstellwinkel bewegt sich sowohl im 
+positiven als auch im negativen Bereich.} Stattdessen wird der Bahnwinkel über \cref{eq:gammaCalculation} berechnet, in 
+welcher die Bahngeschwindigkeit mit der Anströmgeschwindigkeit gleichgesetzt wird (kein Wind).
 
-\section{Trimmpunkte} % Fabrizio
-\todo[inline]{Abschnitt schreiben}
+\begin{equation}
+	\gamma = \arcsin{\left( \frac{\dot h}{V} \right)} = \arcsin{\left( \frac{\dot h}{V_A} \right)}
+	\label{eq:gammaCalculation}
+\end{equation}
+
+\todo{Auswahl des zeitlichen Ausschnitts erklären}
+
+
+\section{Trimmpunkt} % Fabrizio
+\todo[inline]{Abschnitt fertig schreiben: Trimmpunkt}
+In \cref{fig:trimmpunkte} ist beispielhasft der zeitliche Verlauf der Anströmgeschwindigkeit dargestellt. Es zeigen sich 
+insgesamt acht stationären Bereiche, die als Trimmpunkt für eine Modellierung dienen könnten. In den nachfolgenden 
+Systemidentifikationen soll jeweils der erste Punkt (TP 1) als Grundlage dienen. Dazu werden alle Zustandsgrößen über den 
+Bereich TP 1 gemittelt und diese Mittelwerte als Trimmwerte $ x_0 $ und $ u_0 $ verwendet. Damit lassen sich die Abweichungen 
+vom Trimmpunkt berechnen:
+\begin{equation}
+	\begin{split}
+		\Delta x(t) &= x(t)-x_0\\
+		\Delta u(t) &= u(t)-u_0
+	\end{split}
+\end{equation}
+
+Eine Ausnahme bilden hier die Drehraten $ p $, $ q $ und $ r $ , bei denen keine Differenz zum Trimmwert gebildet werden muss.
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\linewidth]{trimmpunkte.png}
+	\caption{zeitlicher Verlauf der Anströmgeschwindigkeit mit den stationären Bereichen}
+	\label{fig:trimmpunkte}
+\end{figure}
+
+
+
+
+\section{Interpolation} %Florian
+\todo[inline]{Abschnitt schreiben: Interpolation}
+
 
 \section{Filterung} %Florian
 
@@ -18,7 +61,7 @@ Das Vorwärts-Rückwärtsfilter bietet den Vorteil, dass keine Phasenverschiebun
 auftritt. Gerade wenn nur einzelne Signalteile gefiltert werden, beispielsweise 
 nur der Eingang, ist diese Eigenschaft unerlässlich. Der Nachteil ist, dass das 
 Filter nicht in Echtzeit verwendet werden kann, da immer die vollständige 
-Datenreihe vorliegen muss. Für eine Systemidentifikation ist dies keine 
+Datenreihe vorliegen muss. Für eine Systemidentifikation ist dies jedoch keine 
 praktische Einschränkung.
 
 \subsection{Ablauf}
