--- a/0a_Abschlussbericht/src/frequenzbereich.tex
+++ b/0a_Abschlussbericht/src/frequenzbereich.tex
@@ -1,1 +1,32 @@
 \chapter{Systemidentifikation im Frequenzbereich}
+
+Neben der Systemidentifikation im Zeitbereich ist es möglich die Parameterschätzung auch im Frequenzbereich durchzuführen. Die Analyse im Frequenzbereich bringt einige Vorteile mit sich, die im weiteren Verlauf dieser Dokumentation genauer beleuchtet werden. Die Grundlage der Frequenzanalyse ist die Fouriertransformation der gemessenen Daten vom Zeitbereich in den Frequenzbereich. Ausgehend von den transformierten Messwerten wird im folgenden genauer auf die Idee der Output-Error Methode und auf den Algorithmus zur Lösung des Schätzproblems eingegangen. Zum Schluss werden die Ergebnisse bewertet und der Blick auf mögliche Verbesserungen und andere Methoden gerichtet.
+
+\section{Fouriertransformation}  
+
+\begin{align}
+	j\omega_{k}\mathbf{\tilde{x}}(k)  &= \mathbf{A\tilde{x}}(k) + \mathbf{B\tilde{u}}(k) \nonumber \\
+ 	\mathbf{\tilde{y}}(k)             &= \mathbf{C\tilde{x}}(k) + \mathbf{D\tilde{u}}(k) = \mathbf{G}(k,\mathbf{\theta})\mathbf{\tilde{u}}(k) \nonumber \\
+ 	\text{mit }\mathbf{G}(k,\mathbf{\theta}) &= \mathbf{C}(j\omega\mathbf{I}-\mathbf{A})^{-1}\mathbf{B}+\mathbf{D}
+	\label{eq:ZRD_Frequenzbereich}
+\end{align}
+
+\section{Output-Error-Methode}
+
+Die Idee der Output-Error Methode (OEM) liegt in der Art der Fehlerbetrachtung. Es wird dabei der Fehler, der durch die mathematische Modellbildung entsteht, vernachlässigt. Das dynamische System wird als deterministisch angenommen. Unsicherheiten entstehen nur durch fehlerhafte und verrauschte Messungen. Ausgangspunkt der OEM ist das transformierte Zustandsraummodell (\ref{eq:ZRD_Frequenzbereich}). Im vorliegenden Fall entspricht der Ausgangsvektor $\tilde{y}$ dem Zustandsvektor $\tilde{x}$. Die Matrizen $\mathbf{C}$ und $\mathbf{D}$ nehmen also folgende Gestalt an:
+
+\begin{align}
+	\mathbf{C} &= \mathbf{I} \nonumber \\
+ 	\mathbf{D} &= \mathbf{0}          
+	\label{eq:CD}
+\end{align}
+
+Da der Zustandsvektor gleichzeitig der gemessen Zustand ist, kann der Output Error folgendermaßen formuliert werden:
+
+\begin{equation}
+    \mathbf{\tilde{\nu}}(k,\mathbf{\theta}) = \mathbf{\tilde{z}}(k)-\mathbf{\tilde{y}}(k,\mathbf{\theta}) = \mathbf{\tilde{z}}(k)-\mathbf{G}(k,\mathbf{\theta})\mathbf{\tilde{u}}(k)  
+	\label{eq:Output_Error}
+\end{equation}
+
+$\mathbf{\tilde{z}}$ entspricht dabei dem gemessenen Zustand der durch Messrauschen aus dem übertragenen Zustand $\mathbf{\tilde{y}}$ entsteht. Der übertragene Zustand kann aus den Steuergrößen $\mathbf{\tilde{u}}$ durch Multiplikation mit der Übertragungsmatrix $\mathbf{G}(\mathbf{\theta}$ berechnet werden. Die Übertagungsmatrix ist, wie in Gleichung \ref{eq:ZRD_Frequenzbereich} gezeigt, abhängig vom zugrunde liegenden Modell und von den zu schätzenden Parametern $\mathbf{\theta}$. Diese sind die Einträge der Matrizen des Zustandsraummodells.   
+
