Zusammenfassung und Ausblick eingefügt

--- a/0a_Abschlussbericht/src/modell.tex
+++ b/0a_Abschlussbericht/src/modell.tex
@@ -1,9 +1,8 @@
 \chapter{Modelle}
 
-Im folgenden Abschnitt werden die der durchgeführten Systemidentifikationen 
-zugrundeliegenden Modelle beschrieben, deren beiwerte zu bestimmen sind. Es 
-handelt sich dabei um die bekannten linearisierten Modelle der Längs- und 
-Seitenbewegung mit den folgenden Annahmen \cite{Fichter2009}:
+Im folgenden Abschnitt werden die der durchgeführten Systemidentifikationen zugrundeliegenden Modelle beschrieben, deren 
+beiwerte zu bestimmen sind. Es handelt sich dabei um die bekannten linearisierten Modelle der Längs- und Seitenbewegung mit 
+den folgenden Annahmen \cite{Fichter2009}:
 \begin{itemize}
 	\item Linearisierung um den symmetrischen Horizontalflug ($ \gamma_0=0 $)
 	\item kein Auftrieb durch Nickrate ($ Z_q=0 $)
@@ -15,13 +14,11 @@ Seitenbewegung mit den folgenden Annahmen \cite{Fichter2009}:
 Die Dynamiken können deshalb entkoppelt behandelt werden. %\cite{Vorlesung2}
 
 \section{Längsbewegung}
-Der Zustand der Längsbewegung setzt sich zusammen aus dem Anstellwinkel $ 
-\alpha $, der Nickrate $ q $, der Anströmgeschwindigkeit $ V_A $ und dem 
-Bahnwinkel $ \gamma $. Die zugehörigen Steuerungen umfassen den 
-Höhenruderausschlag $ \eta $ und den Schubdrosselgrad $ \delta_F $. Bis auf die 
-Nickrate werden alle Größen als Abweichungen (Delta-Größen) vom jeweiligen 
-Trimmpunkt (gekennzeichnet durch den Index "$ _0 $") beschrieben. Es ergibt sich folgendes 
-Modell \cite{Fichter2009}:
+Der Zustand der Längsbewegung setzt sich zusammen aus dem Anstellwinkel $ \alpha $, der Nickrate $ q $, der 
+Anströmgeschwindigkeit $ V_A $ und dem Bahnwinkel $ \gamma $. Die zugehörigen Steuerungen umfassen den Höhenruderausschlag $ 
+\eta $ und den Schubdrosselgrad $ \delta_F $. Bis auf die Nickrate werden alle Größen als Abweichungen (Delta-Größen) vom 
+jeweiligen Trimmpunkt (gekennzeichnet durch den Index "$ _0 $") beschrieben. Es ergibt sich folgendes Modell 
+\cite{Fichter2009}:
 
 \begin{equation}\label{eq:laengsbewegung}
 	\begin{pmatrix}
