--- a/0a_Abschlussbericht/Main.tex
+++ b/0a_Abschlussbericht/Main.tex
@@ -19,7 +19,7 @@
 \clearscrheadfoot
 \ohead{  \normalfont \sffamily \bfseries \small Universität Stuttgart \\[2pt] Institut für Flugmechanik und Flugregelung  \\[8pt] \normalfont\sffamily\footnotesize{Prof. Dr.-Ing. Walter Fichter}\\[-37pt] }
 \lohead{ \includegraphics[scale=0.4, trim= -0.0cm 0.05cm 0cm 0cm] {./src/pics/logo/ifrlogo.pdf} \vspace{0.05cm}}
-
+\cfoot[\pagemark]{}
 
 %Mathematikfunktionen
 \usepackage{amsmath,amsfonts,amssymb}
