Package siunitx eingefügt

--- a/0a_Abschlussbericht/Main.tex
+++ b/0a_Abschlussbericht/Main.tex
@@ -11,6 +11,10 @@
 \usepackage{tikz}
 \usetikzlibrary{plotmarks,shapes,arrows.meta,decorations.markings,patterns,calc}
 
+%Units
+\usepackage{siunitx}
+\sisetup{locale = DE} 
+
 %Kopfzeile
 \usepackage{geometry}
 \geometry{verbose,a4paper,tmargin=3.5cm,bmargin=2.5cm,lmargin=2.6cm,rmargin=2.6cm,headheight=40pt,headsep=1cm}
