Newton Alg. hinzugefügt

--- a/0a_Abschlussbericht/Main.tex
+++ b/0a_Abschlussbericht/Main.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage[headings]{fullpage}
+\newcommand\tab[1][1cm]{\hspace*{#1}}
 
 %Grafikeinbindung
 \usepackage[pdftex]{graphicx,xcolor}
